[project]
name = "resampling-methods"
version = "0.1.0"
description = "Research project on resampling methods (Bootstrapping, Cross-validation, Imbalanced learning)"
authors = [
    {name = "maksimkins", email = "maks.aleshkov.04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Data Science
    "numpy (>=2.0.0)",
    "pandas (>=2.0.0)",
    "scipy (>=1.10.0)",
    
    # Machine Learning & Resampling
    "scikit-learn (>=1.4.0)",        # Essential for Cross-Validation/Stratification
    "imbalanced-learn (>=0.12.0)",   # The standard for resampling (SMOTE, ADASYN, etc.)
    "statsmodels (>=0.14.0)",        # For rigorous statistical bootstrapping
    "gower (>=0.1.2)",               # Your specific distance metric req
    "patsy (>=0.5.6)",               # Formula descriptions for statistical models
    "bottleneck (>=1.3.0)",          # Optimizations for numpy/pandas
    
    # Graph / Networks (Kept from your list)
    "igraph (>=0.11.0)",

    # Visualization
    "matplotlib (>=3.8.0)",
    "seaborn (>=0.13.0)",            # Added: Better statistical plots than raw matplotlib

    # Jupyter Ecosystem
    "jupyterlab (>=4.0.0)",
    "notebook (>=7.0.0)",
    "ipykernel (>=6.29.0)",
    "ipywidgets (>=8.1.0)"           # Interactive widgets in notebooks
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"