[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resampling-methods"
version = "0.1.0"
description = "Resampling based on Sample Concatenation (Re-SC) algorithms for imbalanced learning"
authors = [
    {name = "maksimkins", email = "maks.aleshkov.04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.4.0",
    "imbalanced-learn>=0.12.0"
]

[project.urls]
Homepage = "https://github.com/maksimkins/resampling-methods"


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["oversampling*", "preprocessing*"]

[tool.pytest.ini_options]
pythonpath = ["."]
